Fix display of header on mobile sizes

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -252,7 +252,7 @@ a {
 
 .header {
   height: 100%;
-  padding: 3rem;
+  padding: 3rem 0;
   margin-bottom: 3rem;
   color: $red;
   text-align: center;
